--- a/.github/workflows/proteogenius-ci.yml
+++ b/.github/workflows/proteogenius-ci.yml
@@ -1,1 +1,25 @@
+name: Python CI
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.10 
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  
+      - name: Run tests (if applicable)
+        run: |
+          python -m pytest  # Replace with your testing command if applicable
 
