--- a/.github/workflows/proteogenius-ci.yml
+++ b/.github/workflows/proteogenius-ci.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.10 
+          python-version: 3.10.0
 
       - name: Install dependencies
         run: |
@@ -21,5 +21,5 @@ jobs:
           pip install -r requirements.txt  
       - name: Run tests (if applicable)
         run: |
-          python -m pytest  # Replace with your testing command if applicable
+          python -m pytest  
 
